--- a/ClientApp/app/components/addclient/addclient.html
+++ b/ClientApp/app/components/addclient/addclient.html
@@ -9,24 +9,30 @@
 			<form>
 				<div class="form-group">
 					<div class="row">
+
+						<div class="col-xs-5">
+							<!-- Client Id -->
+							<label for="clientId" class="control-label">Client ID</label>
+							<input type="text" class="form-control" id="clientId" name="clientId" placeholder="Client ID" value.bind="clientId">
+						</div>
+
 						<div class="col-xs-5">
 							<!-- Client Name -->
 							<label for="clientName" class="control-label">Client Name</label>
 							<input type="text" class="form-control" id="clientName" name="clientName" placeholder="Client Name" value.bind="clientName">
 						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="row">
 
 						<div class="col-xs-5">
 							<!-- Client Secret -->
 							<label for="clientSecret" class="control-label">Client Secret</label>
 							<input type="text" class="form-control" id="clientSecret" name="clientSecret" placeholder="Clinet Secret" value.bind="clientSecret">
 						</div>
-					</div>
 
-
-				</div>
-
-				<div class="form-group">
-					<div class="row">
 						<div class="col-xs-5">
 							<!-- Grant Type -->
 							<label for="grantType" class="control-label">Grant Type</label>
@@ -38,7 +44,11 @@
 								</option>
 							</select>
 						</div>
+					</div>
+				</div>
 
+				<div class="form-group">
+					<div class="row">
 						<div class="col-xs-5">
 							<!-- Client Properties -->
 							<label for="clientProperties" class="control-label">Client Properties</label>
@@ -59,7 +69,7 @@
 							<!-- Identity Resources -->
 							<label for="identityResources" class="control-label">Identity Resources</label>
 							<p repeat.for="identityResource of identityResources">
-								<input type="checkbox" model.bind="identityResource.id" checked.bind="selectedIdentityResources">
+								<input type="checkbox" model.bind="identityResource.name" checked.bind="selectedIdentityResources">
 								${identityResource.name}
 							</p>
 						</div>
@@ -67,7 +77,7 @@
 						<div class="col-xs-5">
 							<label for="ApiResources" class="control-label">Api Resources</label>
 							<p repeat.for="apiResource of apiResources">
-								<input type="checkbox" model.bind="apiResource.id" checked.bind="selectedApiResources">
+								<input type="checkbox" model.bind="apiResource.name" checked.bind="selectedApiResources">
 								${apiResource.name}
 							</p>
 						</div>
@@ -101,7 +111,7 @@
 
 				<div class="form-group">
 					<!-- Submit Button -->
-					<button type="submit" class="btn btn-primary">Add</button>
+					<button type="submit" class="btn btn-primary" click.delegate="add()">Add</button>
 				</div>
 
 			</form>
