--- a/ClientApp/app/components/viewallclients/viewallclients.html
+++ b/ClientApp/app/components/viewallclients/viewallclients.html
@@ -17,6 +17,7 @@
 							<th scope="col">Client Property</th>
 							<th scope="col">Client URI</th>
 							<th scope="col">Redirect URL</th>
+							<th scope="col">Front Channel Logout URL</th>
 							<th scope="col">Post Logout URL</th>
 						</tr>
 					</thead>
@@ -28,6 +29,7 @@
 							<td>${ client.clientProperty }</td>
 							<td>${ client.clientUri }</td>
 							<td>${ client.redirectUrl }</td>
+							<td>${ client.frontChannelLogoutUrl }</td>
 							<td>${ client.postLogoutUrl }</td>
 						</tr>
 					</tbody>
