updateclient halfway done

--- a/ClientApp/app/components/updateclient/updateclient.html
+++ b/ClientApp/app/components/updateclient/updateclient.html
@@ -1,7 +1,7 @@
 ﻿<template>
 	<div class="panel panel-default cl-xs-11">
 		<div class="panel-heading">
-			<h3>View Client </h3>
+			<h3>Update Client </h3>
 		</div>
 		<br />
 		<!--<p if.bind="!forecasts"><em>Loading...</em></p>-->
