--- a/ClientApp/app/components/viewallclients/viewallclients.html
+++ b/ClientApp/app/components/viewallclients/viewallclients.html
@@ -2,6 +2,7 @@
 	<div class="panel panel-default cl-xs-11">
 		<div class="panel-heading">
 			<h3>View Clients </h3>
+			<p>Click on any row to update the details of the client</p>
 		</div>
 		<br />
 		<!--<p if.bind="!forecasts"><em>Loading...</em></p>-->
@@ -11,6 +12,7 @@
 				<table class="table cl-xs-10 table-bordered">
 					<thead class="thead-dark">
 						<tr>
+							<th scope="col"></th>
 							<th scope="col">Client ID</th>
 							<th scope="col">Client Name</th>
 							<th scope="col">Grant Type</th>
