--- a/ClientApp/app/components/updateclient/updateclient.html
+++ b/ClientApp/app/components/updateclient/updateclient.html
@@ -3,13 +3,11 @@
 		<div class="panel-heading">
 			<h3>Update Client </h3>
 		</div>
-		<br />
 		<!--<p if.bind="!forecasts"><em>Loading...</em></p>-->
 		<div class="panel-body">
 			<form>
 				<div class="form-group">
 					<div class="row">
-
 						<div class="col-xs-5">
 							<!-- Client Id -->
 							<label for="clientId" class="control-label">Client ID</label>
@@ -38,7 +36,7 @@
 							<label for="grantType" class="control-label">Grant Type</label>
 							<select class="form-control" value.bind="client.grantType">
 								<option model.bind="null">Choose...</option>
-								<option repeat.for="gt of grantTypes"
+								<option repeat.for="gt of clientHelper.grantTypes"
 										model.bind="gt">
 									${gt}
 								</option>
@@ -54,7 +52,7 @@
 							<label for="clientProperties" class="control-label">Client Properties</label>
 							<select class="form-control" value.bind="client.clientProperty">
 								<option model.bind="null">Choose...</option>
-								<option repeat.for="cp of clientProperties"
+								<option repeat.for="cp of clientHelper.clientProperties"
 										model.bind="cp">
 									${cp}
 								</option>
@@ -68,7 +66,7 @@
 						<div class="col-xs-5">
 							<!-- Identity Resources -->
 							<label for="identityResources" class="control-label">Identity Resources</label>
-							<p repeat.for="identityResource of identityResources">
+							<p repeat.for="identityResource of clientHelper.identityResources">
 								<input type="checkbox" model.bind="identityResource.name" checked.bind="selectedIdentityResources">
 								${identityResource.name}
 							</p>
@@ -76,7 +74,7 @@
 
 						<div class="col-xs-5">
 							<label for="ApiResources" class="control-label">Api Resources</label>
-							<p repeat.for="apiResource of apiResources">
+							<p repeat.for="apiResource of clientHelper.apiResources">
 								<input type="checkbox" model.bind="apiResource.name" checked.bind="selectedApiResources">
 								${apiResource.name}
 							</p>
@@ -111,9 +109,9 @@
 
 				<div class="form-group">
 					<!-- Submit Button -->
-					<button type="submit" class="btn btn-primary" click.delegate="upload()">Upload</button>
+					<button type="submit" class="btn btn-primary" click.delegate="update()">Update</button>
+					<button class="btn btn-danger control-label" click.delegate="delete(client.clientId)"><span class="glyphicon glyphicon-trash"></span> Delete Client</button>
 				</div>
-
 			</form>
 		</div>
 	</div>
