--- a/ClientApp/app/components/navmenu/navmenu.html
+++ b/ClientApp/app/components/navmenu/navmenu.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/home">ClientApp IDS4</a>
+                <a class="navbar-brand" href="#/home">Admin UI</a>
             </div>
             <div class="clearfix"></div>
             <div class="navbar-collapse collapse">
