--- a/ClientApp/app/components/home/home.html
+++ b/ClientApp/app/components/home/home.html
@@ -4,6 +4,6 @@
     <ul>
         <li>To ADD clients - Goto the "Add Client"  in the navigation menu</li>
 		<li>To View all clients - Goto the "View Clienst"  in the navigation menu</li>
-		<li>To Update and Delete a clients - Click on a table row in "View Client" views</li>
+		<li>To Update and Delete a clients - Click on a row of the table in "View Client" views</li>
     </ul>    
 </template>
